[package]
name = "etcd-client"
version = "0.12.4"
authors = ["The etcd-client Authors <davidli2010@foxmail.com>"]
edition = "2021"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "An etcd v3 API client"
repository = "https://github.com/etcdv3/etcd-client.git"
homepage = "https://github.com/etcdv3/etcd-client"
documentation = "https://docs.rs/etcd-client/"
keywords = ["etcd", "v3", "api", "client", "async"]

[features]
tls = ["tonic/tls"]
tls-openssl = ["openssl", "hyper-openssl", "hyper"]
tls-openssl-vendored = ["tls-openssl", "openssl/vendored"]
tls-roots = ["tls", "tonic/tls-roots"]
pub-response-field = ["visible"]

[dependencies]
tonic = "0.10.0"
prost = "0.12.0"
tokio = "1.32.0"
tokio-stream = "0.1.14"
tower-service = "0.3.2"
http = "0.2.9"
visible =  { version = "0.0.1", optional = true }
tower = { version = "0.4.13", default-features = false }
openssl = { version = "0.10", optional = true }
hyper = { version = "0.14.26", features = ["h2", "client"], optional = true }
hyper-openssl = { version = "0.9", optional = true }

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.10.0", default-features = false, features = ["prost"] }

[package.metadata.docs.rs]
features = ["tls", "tls-roots"]
rustdoc-args = ["--cfg", "docsrs"]
