[package]
name = "etcd-client"
version = "0.14.1"
authors = ["The etcd-client Authors <davidli2010@foxmail.com>"]
edition = "2021"
rust-version = "1.80.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "An etcd v3 API client"
repository = "https://github.com/etcdv3/etcd-client.git"
homepage = "https://github.com/etcdv3/etcd-client"
documentation = "https://docs.rs/etcd-client/"
keywords = ["etcd", "v3", "api", "client", "async"]

[features]
tls = ["tonic/tls"]
tls-openssl = ["openssl", "hyper-openssl", "hyper", "hyper-util"]
tls-openssl-vendored = ["tls-openssl", "openssl/vendored"]
tls-roots = ["tls", "tonic/tls-roots"]
pub-response-field = ["visible"]
build-server = ["pub-response-field"]

[dependencies]
tonic = "0.12.3"
prost = "0.13"
tokio = "1.38"
tokio-stream = "0.1"
tower-service = "0.3"
http = "1.1"
visible = { version = "0.0.1", optional = true }
tower = { version = "0.4", default-features = false }
openssl = { version = "0.10", optional = true }
hyper = { version = "1.4", features = ["client"], optional = true }
hyper-openssl = { version = "0.10", features = ["client-legacy", "tokio"], optional = true }
hyper-util = { version = "0.1", features = ["client-legacy"], optional = true }

[dev-dependencies]
tokio = { version = "1.38", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.12.3", default-features = false, features = ["prost"] }

[package.metadata.docs.rs]
features = ["tls", "tls-roots"]
rustdoc-args = ["--cfg", "docsrs"]
