[package]
name = "etcd-client"
version = "0.16.1"
authors = ["The etcd-client Authors <davidli2010@foxmail.com>"]
edition = "2021"
rust-version = "1.86.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "An etcd v3 API client"
repository = "https://github.com/etcdv3/etcd-client.git"
homepage = "https://github.com/etcdv3/etcd-client"
documentation = "https://docs.rs/etcd-client/"
keywords = ["etcd", "v3", "api", "client", "async"]

[features]
tls = ["tonic/tls-ring"]
tls-openssl = ["openssl", "hyper-openssl", "hyper", "hyper-util"]
tls-openssl-vendored = ["tls-openssl", "openssl/vendored"]
tls-roots = ["tls", "tonic/tls-native-roots"]
pub-response-field = ["visible"]
build-server = ["pub-response-field"]
raw-channel = []

[dependencies]
tonic = "0.14"
prost = "0.14"
tonic-prost = "0.14"
tokio = "1"
tokio-stream = "0.1"
tower-service = "0.3"
http = "1.1"
visible = { version = "0.0.1", optional = true }
tower = { version = "0.5", default-features = false }
openssl = { version = "0.10", optional = true }
hyper = { version = "1.4", features = ["client"], optional = true }
hyper-openssl = { version = "0.10", features = ["client-legacy", "tokio"], optional = true }
hyper-util = { version = "0.1", features = ["client-legacy"], optional = true }

[dev-dependencies]
tokio = { version = "1.38", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.14", default-features = false }
tonic-prost-build = "0.14"

[package.metadata.docs.rs]
features = ["tls", "tls-roots"]
rustdoc-args = ["--cfg", "docsrs"]
